// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAreaView renders correctly when no selection and empty title and empty value 1`] = `
<div
  className="textAreaCriterionCell"
>
  <br />
  <div
    className="criterionTitle"
  />
  <div>
    <textarea
      className="textArea"
      cols={80}
      onChange={[Function]}
      rows={4}
      value=""
    />
  </div>
</div>
`;

exports[`TextAreaView renders correctly when no selection and text title and empty value 1`] = `
<div
  className="textAreaCriterionCell"
>
  <br />
  <div
    className="criterionTitle"
  >
    xyzzy
  </div>
  <div>
    <textarea
      className="textArea"
      cols={80}
      onChange={[Function]}
      rows={4}
      value=""
    />
  </div>
</div>
`;

exports[`TextAreaView renders correctly when no selection and text title and text value 1`] = `
<div
  className="textAreaCriterionCell"
>
  <br />
  <div
    className="criterionTitle"
  >
    foo
  </div>
  <div>
    <textarea
      className="textArea"
      cols={80}
      onChange={[Function]}
      rows={4}
      value="bar"
    />
  </div>
</div>
`;

exports[`TextAreaView renders correctly when no selection and text title and value with XSS attack 1`] = `
<div
  className="textAreaCriterionCell"
>
  <br />
  <div
    className="criterionTitle"
  >
    title
  </div>
  <div>
    <textarea
      className="textArea"
      cols={80}
      onChange={[Function]}
      rows={4}
      value="<span onmouseover=\\"alert(document.cookie)\\">this is an
XSS attack</span>"
    />
  </div>
</div>
`;

exports[`TextAreaView renders correctly when no selection and text title and value with newlines 1`] = `
<div
  className="textAreaCriterionCell"
>
  <br />
  <div
    className="criterionTitle"
  >
    foo
  </div>
  <div>
    <textarea
      className="textArea"
      cols={80}
      onChange={[Function]}
      rows={4}
      value="bar

baz"
    />
  </div>
</div>
`;

exports[`TextAreaView renders correctly when selection and empty title and empty value 1`] = `<span />`;

exports[`TextAreaView renders correctly when selection and text title and empty value 1`] = `<span />`;

exports[`TextAreaView renders correctly when selection and text title and text value 1`] = `
<div
  className="textAreaCriterionCell withBorder"
>
  <br />
  <div
    className="criterionTitle"
  >
    foo
  </div>
  <div>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "bar",
        }
      }
    />
  </div>
</div>
`;

exports[`TextAreaView renders correctly when selection and text title and value with XSS attack 1`] = `
<div
  className="textAreaCriterionCell withBorder"
>
  <br />
  <div
    className="criterionTitle"
  >
    title
  </div>
  <div>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "&lt;span onmouseover=\\"alert(document.cookie)\\"&gt;this is an<br>XSS attack&lt;/span&gt;",
        }
      }
    />
  </div>
</div>
`;

exports[`TextAreaView renders correctly when selection and text title and value with newlines 1`] = `
<div
  className="textAreaCriterionCell withBorder"
>
  <br />
  <div
    className="criterionTitle"
  >
    foo
  </div>
  <div>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "bar<br><br>baz",
        }
      }
    />
  </div>
</div>
`;
